--- a/src/components/css/header.css
+++ b/src/components/css/header.css
@@ -26,10 +26,17 @@
 .header .navbar .navbar-toggler .navbar-toggler-icon {
   background-image: url("data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 30 30%27%3e%3cpath stroke=%27rgba%28255, 255, 255, 0.85%29%27 stroke-linecap=%27round%27 stroke-miterlimit=%2710%27 stroke-width=%272%27 d=%27M4 7h22M4 15h22M4 23h22%27/%3e%3c/svg%3e");
 }
-.header .navbar .offcanvas .offcanvas-body .nav-link {
+.header .navbar .offcanvas .offcanvas-body a {
+  padding: 8px;
   color: #fff;
+  letter-spacing: 0.5px;
   font-size: 1.5rem;
   font-family: "Agdasima", sans-serif;
+  cursor: pointer;
+}
+.header .navbar .offcanvas .offcanvas-body a:hover {
+  opacity: 0.6;
+  font-size: 1.6rem;
 }
 
 .offcanvas {
@@ -45,12 +52,14 @@
 .offcanvas .offcanvas-header .btn-close:focus {
   border-radius: 50%;
 }
-.offcanvas .offcanvas-body .navbar-nav .nav-link {
+.offcanvas .offcanvas-body .navbar-nav a {
+  padding: 8px 0px;
   color: #fff;
   font-size: 1.5rem;
   font-weight: 400;
   letter-spacing: 0.5px;
   font-family: "Agdasima", sans-serif;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=header.css.map */
