--- a/src/components/sass/header.sass
+++ b/src/components/sass/header.sass
@@ -30,10 +30,18 @@
 
         .offcanvas
             .offcanvas-body
-                .nav-link
+                a
+                    padding : 8px
                     color : #fff
+                    letter-spacing : 0.5px
                     font-size : 1.5rem
                     font-family : 'Agdasima', sans-serif
+                    cursor : pointer
+
+                    &:hover
+                        opacity : 0.6
+                        font-size : 1.6rem
+                        
 
 
 .offcanvas
@@ -51,9 +59,11 @@
 
     .offcanvas-body
         .navbar-nav
-            .nav-link
+            a
+                padding : 8px 0px
                 color : #fff
                 font-size : 1.5rem
                 font-weight : 400
                 letter-spacing: 0.5px
                 font-family: 'Agdasima', sans-serif
+                cursor : pointer
